--- a/src/main/resources/com/example/_365_project/workOut.fxml
+++ b/src/main/resources/com/example/_365_project/workOut.fxml
@@ -11,138 +11,134 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example._365_project.workoutController">
-  <tabs>
-    <Tab text="Login/Sign Up">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <Label alignment="CENTER" layoutX="250.0" layoutY="14.0" text="Login">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font></Label>
-                  <Label layoutX="112.0" layoutY="55.0" text="Username" />
-                  <Label layoutX="243.0" layoutY="172.0" text="Sign Up">
-                     <font>
-                        <Font name="Arial Bold" size="24.0" />
-                     </font></Label>
-                  <Label layoutX="113.0" layoutY="95.0" text="Password" />
-                  <Label layoutX="111.0" layoutY="221.0" text="Username" />
-                  <Label layoutX="112.0" layoutY="264.0" text="Password" />
-                  <Label layoutX="111.0" layoutY="303.0" text="Confirm Password" />
-                  <TextField fx:id="username" layoutX="208.0" layoutY="51.0" />
-                  <PasswordField fx:id="password" layoutX="208.0" layoutY="91.0" />
-                  <PasswordField layoutX="208.0" layoutY="260.0" />
-                  <PasswordField layoutX="208.0" layoutY="299.0" />
-                  <TextField layoutX="208.0" layoutY="217.0" />
-                  <Button fx:id="login" layoutX="260.0" layoutY="126.0" mnemonicParsing="false" onAction="#submitLoginHandler" text="Login" />
-                  <Button layoutX="259.0" layoutY="331.0" mnemonicParsing="false" text="Sign Up" />
-               </children></AnchorPane>
-      </content>
-    </Tab>
-    <Tab text="Profile">
-      <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <LineChart layoutX="204.0" layoutY="61.0" prefHeight="310.0" prefWidth="396.0">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </LineChart>
-                  <Label layoutX="374.0" layoutY="43.0" text="Progress Chart" />
-                  <Label layoutX="63.0" layoutY="52.0" text="Welcome Back!" />
-                  <Label layoutX="40.0" layoutY="145.0" text="Calories Lost this Week!" />
-                  <Button fx:id="returnBtn" layoutX="92.0" layoutY="305.0" mnemonicParsing="false" onAction="#returnBtnHandler" text="Return" />
-                  <TextArea fx:id="textSum" layoutX="40.0" layoutY="170.0" prefHeight="119.0" prefWidth="143.0" />
-               </children></AnchorPane>
-      </content>
-    </Tab>
-      <Tab text="Add Workout">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <Button fx:id="addWorkout" layoutX="252.0" layoutY="291.0" mnemonicParsing="false" onAction="#submitWorkoutHandler" text="Add WorkOut" />
-                  <DatePicker layoutX="36.0" layoutY="44.0" />
-                  <TextField layoutX="225.0" layoutY="112.0" />
-                  <TextField layoutX="225.0" layoutY="173.0" />
-                  <TextField alignment="CENTER" layoutX="225.0" layoutY="234.0" />
-                  <Label layoutX="79.0" layoutY="26.0" text="Date of Workout" />
-                  <Label layoutX="418.0" layoutY="26.0" text="Choose your Workout" />
-                  <Label layoutX="286.0" layoutY="95.0" text="Sets" />
-                  <Label alignment="CENTER" layoutX="284.0" layoutY="150.0" prefHeight="22.0" prefWidth="26.0" text="Reps" />
-                  <Label alignment="CENTER" layoutX="283.0" layoutY="217.0" text="Weight" />
-                  <ChoiceBox fx:id="workoutChoicebox" layoutX="401.0" layoutY="44.0" onMouseClicked="#workoutChoiceHandler" prefWidth="150.0" />
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
-      <Tab text="View/Delete Workout">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <DatePicker layoutX="189.0" layoutY="25.0" />
-                  <ListView fx:id="workoutList" layoutX="-2.0" layoutY="76.0" prefHeight="296.0" prefWidth="600.0" />
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
-      <Tab text="Leader Board">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-               <children>
-                  <MenuBar layoutX="137.0" layoutY="14.0">
-                    <menus>
-                        <Menu mnemonicParsing="false" text="Overall">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Week" />
-                              <MenuItem mnemonicParsing="false" text="Month" />
-                              <MenuItem mnemonicParsing="false" text="Year" />
-                           </items>
-                        </Menu>
-                      <Menu mnemonicParsing="false" text="Squat ">
-                        <items>
-                              <MenuItem mnemonicParsing="false" text="Week" />
-                              <MenuItem mnemonicParsing="false" text="Month" />
-                              <MenuItem mnemonicParsing="false" text="Year" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Bench">
-                        <items>
-                              <MenuItem mnemonicParsing="false" text="Week" />
-                              <MenuItem mnemonicParsing="false" text="Month" />
-                              <MenuItem mnemonicParsing="false" text="Year" />
-                        </items>
-                      </Menu>
-                      <Menu mnemonicParsing="false" text="Dead Lift">
-                        <items>
-                              <MenuItem mnemonicParsing="false" text="Week" />
-                              <MenuItem mnemonicParsing="false" text="Month" />
-                              <MenuItem mnemonicParsing="false" text="Year" />
-                        </items>
-                      </Menu>
-                        <Menu mnemonicParsing="false" text="Calories Lost">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Week" />
-                              <MenuItem mnemonicParsing="false" text="Month" />
-                              <MenuItem mnemonicParsing="false" text="Year" />
-                           </items>
-                        </Menu>
-                    </menus>
-                  </MenuBar>
-               </children>
-            </AnchorPane>
-        </content>
-      </Tab>
-  </tabs>
+    <tabs>
+        <Tab text="Profile">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <LineChart fx:id="lineChart" layoutX="204.0" layoutY="61.0" prefHeight="310.0" prefWidth="396.0" title="Progress Chart">
+                            <xAxis>
+                                <CategoryAxis side="BOTTOM" />
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis side="LEFT" />
+                            </yAxis>
+                        </LineChart>
+                        <Label fx:id="profileText" layoutX="52.0" layoutY="14.0" prefHeight="17.0" prefWidth="113.0" text="Profile: (username)" />
+                        <Label layoutX="47.0" layoutY="153.0" prefHeight="17.0" prefWidth="137.0" text="Calories lost this week!" />
+                        <Button fx:id="returnBtn" layoutX="83.0" layoutY="324.0" mnemonicParsing="false" onAction="#returnBtnHandler" text="Return" />
+                        <TextArea fx:id="textSum" layoutX="25.0" layoutY="171.0" prefHeight="147.0" prefWidth="181.0" />
+                        <ImageView fitHeight="98.0" fitWidth="163.0" layoutX="52.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@arnold.png" />
+                            </image>
+                        </ImageView>
+                    </children></AnchorPane>
+            </content>
+        </Tab>
+        <Tab text="Add Workout">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <Button fx:id="addWorkout" layoutX="254.0" layoutY="310.0" mnemonicParsing="false" onAction="#submitWorkoutHandler" text="Save Exercise" />
+                        <DatePicker fx:id="datepicker" layoutX="60.0" layoutY="69.0" />
+                        <TextField fx:id="setsBox" alignment="CENTER" layoutX="222.0" layoutY="139.0" />
+                        <TextField fx:id="repsBox" alignment="CENTER" layoutX="225.0" layoutY="203.0" />
+                        <TextField fx:id="weightBox" alignment="CENTER" layoutX="222.0" layoutY="268.0" />
+                        <Label layoutX="82.0" layoutY="25.0" text="Date of Workout">
+                            <font>
+                                <Font name="System Bold" size="16.0" />
+                            </font></Label>
+                        <Label layoutX="409.0" layoutY="25.0" prefHeight="25.0" prefWidth="74.0" text="Exercise">
+                            <font>
+                                <Font name="System Bold" size="16.0" />
+                            </font></Label>
+                        <Label layoutX="286.0" layoutY="111.0" text="Sets" />
+                        <Label alignment="CENTER" layoutX="284.0" layoutY="174.0" prefHeight="22.0" prefWidth="26.0" text="Reps" />
+                        <Label alignment="CENTER" layoutX="278.0" layoutY="240.0" text="Weight" />
+                        <ChoiceBox fx:id="workoutChoicebox" layoutX="371.0" layoutY="69.0" onMouseClicked="#workoutChoiceHandler" prefWidth="150.0" />
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
+        <Tab text="View/Delete Workout">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <DatePicker layoutX="189.0" layoutY="25.0" />
+                        <ListView fx:id="workoutList" layoutX="-2.0" layoutY="76.0" prefHeight="296.0" prefWidth="600.0" />
+                        <TextArea fx:id="exerciseText" layoutX="45.0" layoutY="109.0" prefHeight="238.0" prefWidth="255.0" />
+                  <TableView fx:id="workoutTable" layoutX="108.0" layoutY="109.0" prefHeight="200.0" prefWidth="380.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="Date" />
+                      <TableColumn prefWidth="75.0" text="Exercise" />
+                        <TableColumn prefWidth="75.0" text="Sets" />
+                        <TableColumn prefWidth="75.0" text="Reps" />
+                        <TableColumn prefWidth="75.0" text="Weight" />
+                    </columns>
+                  </TableView>
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
+        <Tab text="Leaderboard">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: FFD700;">
+                    <children>
+                        <MenuBar layoutX="137.0" layoutY="14.0">
+                            <menus>
+                                <Menu mnemonicParsing="false" text="Overall">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Week" />
+                                        <MenuItem mnemonicParsing="false" text="Month" />
+                                        <MenuItem mnemonicParsing="false" text="Year" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Squat ">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Week" />
+                                        <MenuItem mnemonicParsing="false" text="Month" />
+                                        <MenuItem mnemonicParsing="false" text="Year" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Bench">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Week" />
+                                        <MenuItem mnemonicParsing="false" text="Month" />
+                                        <MenuItem mnemonicParsing="false" text="Year" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Dead Lift">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Week" />
+                                        <MenuItem mnemonicParsing="false" text="Month" />
+                                        <MenuItem mnemonicParsing="false" text="Year" />
+                                    </items>
+                                </Menu>
+                                <Menu mnemonicParsing="false" text="Calories Lost">
+                                    <items>
+                                        <MenuItem mnemonicParsing="false" text="Week" />
+                                        <MenuItem mnemonicParsing="false" text="Month" />
+                                        <MenuItem mnemonicParsing="false" text="Year" />
+                                    </items>
+                                </Menu>
+                            </menus>
+                        </MenuBar>
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
+    </tabs>
 </TabPane>
